--- a/portfolio.html
+++ b/portfolio.html
@@ -61,16 +61,23 @@
                     <ul class="project-list list">
                         <li class="project-item">
                             <a href="" class="project-item-link link">
-                                <img class="project-img" src="./images/portfolio/technokrjak.jpg" alt="лептоп с фотографиями людей" width="370">
+                                <div class="project-img-box">
+                                    <img class="project-img" src="./images/portfolio/technokrjak.jpg" alt="лептоп с фотографиями людей" width="370">
+                                    <p class="project-scripture link">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                                </div>
                                 <div class="card-border">
                                     <h3 class="project-name">Технокряк</h3>
                                     <p class="project-kind">Веб-сайт</p>
                                 </div>
+                                
                             </a>  
                         </li>
                         <li class="project-item">
                             <a href="" class="project-item-link link">
-                                <img class="project-img" src="./images/portfolio/New-Orlean-vs-Golden-Star.jpg" alt="баскетболисты в схватке за мяч" width="370">
+                                <div class="project-img-box">
+                                    <img class="project-img" src="./images/portfolio/New-Orlean-vs-Golden-Star.jpg" alt="баскетболисты в схватке за мяч" width="370">
+                                    <p class="project-scripture link"></p>
+                                </div>
                                 <div class="card-border">
                                     <h3 class="project-name">Постер <span lang="en">New Orlean vs Golden Star</span></h3>
                                     <p class="project-kind">Дизайн</p>
@@ -79,7 +86,10 @@
                         </li>
                         <li class="project-item">
                             <a href="" class="project-item-link link">
-                                <img class="project-img" src="./images/portfolio/Seafood.jpg" alt="логотип ресторана морской еды" width="370">
+                                <div class="project-img-box">
+                                    <img class="project-img" src="./images/portfolio/Seafood.jpg" alt="логотип ресторана морской еды" width="370">
+                                    <p class="project-scripture link"></p>
+                                </div>
                                 <div class="card-border">
                                     <h3 class="project-name">Ресторан <span lang="en">Seafood</span></h3>
                                     <p class="project-kind">Приложение</p>
@@ -88,7 +98,10 @@
                         </li>
                         <li class="project-item">
                             <a href="" class="project-item-link link">
-                                <img class="project-img" src="./images/portfolio/Prime.jpg" alt="черные полноразмерные беспроводные наушники" width="370">
+                                <div class="project-img-box">
+                                    <img class="project-img" src="./images/portfolio/Prime.jpg" alt="черные полноразмерные беспроводные наушники" width="370"><link rel="stylesheet" href="">
+                                    <p class="project-scripture link"></p>
+                                </div>
                                 <div class="card-border">
                                     <h3 class="project-name">Проект <span lang="en">Prime</span></h3>
                                     <p class="project-kind">Маркетинг</p>
@@ -97,7 +110,10 @@
                         </li>
                         <li class="project-item">
                             <a href="" class="project-item-link link">
-                                <img class="project-img" src="./images/portfolio/Boxes.jpg" alt="две картонные коробочки" width="370">
+                                <div class="project-img-box">
+                                    <img class="project-img" src="./images/portfolio/Boxes.jpg" alt="две картонные коробочки" width="370"><link rel="stylesheet" href="">
+                                    <p class="project-scripture link"></p>
+                                </div>
                                 <div class="card-border">
                                     <h3 class="project-name">Проект <span lang="en">Boxes</span></h3>
                                     <p class="project-kind">Приложение</p>
@@ -106,7 +122,10 @@
                         </li>
                         <li class="project-item">
                             <a href="" class="project-item-link link">
-                                <img class="project-img" src="./images/portfolio/Inspiration-has-no-Borders.jpg" alt="монитор с открытым сайтом" width="370">
+                                <div class="project-img-box">
+                                    <img class="project-img" src="./images/portfolio/Inspiration-has-no-Borders.jpg" alt="монитор с открытым сайтом" width="370"><link rel="stylesheet" href="">
+                                    <p class="project-scripture link"></p>
+                                </div>
                                 <div class="card-border">
                                     <h3 class="project-name" lang="en">Inspiration has no Borders</h3>
                                     <p class="project-kind">Веб-сайт</p>
@@ -115,7 +134,10 @@
                        </li>
                         <li class="project-item">
                             <a href="" class="project-item-link link">
-                                <img class="project-img" src="./images/portfolio/Limited-Edition.jpg" alt="разворот журнала" width="370">
+                                <div class="project-img-box">
+                                    <img class="project-img" src="./images/portfolio/Limited-Edition.jpg" alt="разворот журнала" width="370"><link rel="stylesheet" href="">
+                                    <p class="project-scripture link"></p>
+                                </div>
                                 <div class="card-border">
                                     <h3 class="project-name">Издание <span lang="en">Limited Edition</span></h3>
                                     <p class="project-kind">Дизайн</p>
@@ -124,7 +146,10 @@
                         </li>
                         <li class="project-item">
                             <a href="" class="project-item-link link">
-                                <img class="project-img" src="./images/portfolio/project-LAB.jpg" alt="бирка с логотипом проекта" width="370">
+                                <div class="project-img-box">
+                                    <img class="project-img" src="./images/portfolio/project-LAB.jpg" alt="бирка с логотипом проекта" width="370"><link rel="stylesheet" href="">
+                                    <p class="project-scripture link"></p>
+                                </div>
                                 <div class="card-border">
                                     <h3 class="project-name">Проект <span lang="en">LAB</span></h3>
                                     <p class="project-kind">Маркетинг</p>
@@ -133,7 +158,10 @@
                         </li>
                         <li class="project-item">
                             <a href="" class="project-item-link link">
-                                <img class="project-img" src="./images/portfolio/GrowingB-usiness.jpg" alt="лептоп с открытым сайтом" width="370">
+                                <div class="project-img-box">
+                                    <img class="project-img" src="./images/portfolio/GrowingB-usiness.jpg" alt="лептоп с открытым сайтом" width="370"><link rel="stylesheet" href="">
+                                    <p class="project-scripture link"></p>
+                                </div>
                                 <div class="card-border">
                                     <h3 class="project-name" lang="en">Growing Business</h3>
                                     <p class="project-kind">Приложение</p>
@@ -199,5 +227,8 @@
                 </div>
             </div>  
         </footer>
+        <div class="backdrop">
+            
+        </div>
     </body>
 </html>
