--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <section class="hero"> 
             <div class="conteiner">
                 <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-                <button type="button" class="hero-btn">Заказать услугу</button>
+                <button type="button" class="hero-btn" data-modal-open>Заказать услугу</button>
             </div>
         </section>
 
@@ -100,12 +100,15 @@
                 <ul class="our-work-list list">
                     <li class="our-work-item">
                         <img src="./images/first-page/img.jpg" alt="написание програмного кода" width="370" height="294">
+                        <p class="our-work-text">Десктопные приложения</p>
                     </li>
                     <li class="our-work-item">
                         <img src="./images/first-page/img_1.jpg" alt="разработка приложений для мобильных устройств" width="370" height="294">
+                        <p class="our-work-text">Мобильные приложения</p>
                     </li>
                     <li class="our-work-item">
                         <img src="./images/first-page/img_2.jpg" alt="разработка дизайна при помощи графического планшета" width="370" height="294">
+                        <p class="our-work-text">Дизайнерские решения</p>
                     </li>
                 </ul>
             </div>
@@ -369,5 +372,16 @@
             </div>
         </div>  
     </footer>
+    <div class="backdrop is-hidden" data-modal>
+        <div class="modal">
+            <button type="button" class="modal-close-btn" data-modal-close>
+                <svg class="close-btn-img" width="18" height="18">
+                    <use href="./images/icons.svg#icon-close-black"></use>
+                </svg>
+            </button>
+        </div>
+          
+    </div>
+    <script src="./js/modal-js.js"></script>
 </body>
 </html>
