--- a/index.html
+++ b/index.html
@@ -370,6 +370,14 @@
                     </li>
                 </ul>
             </div>
+            <form class="footer-form">
+                <div class="signature-block">
+                    <label for="signature" class="signature-label">Подпишитесь на рассылку</label>
+                    <input type="email" name="signature-mail" class="signature-input" id="signature">
+                </div>
+                <button type="sabmit" class="signature-btn">Подписаться</button>
+
+            </form>
         </div>  
     </footer>
     <div class="backdrop is-hidden" data-modal>
@@ -379,6 +387,17 @@
                     <use href="./images/icons.svg#icon-close-black"></use>
                 </svg>
             </button>
+            <form class="modal-form">
+                <label for="name">Имя</label>
+                <input type="text" name="user-name" id="name">
+                <label for="tel">Телефон</label>
+                <input type="tel" name="tel" id="tel">
+                <label for="email">Почта</label>
+                <input type="email" name="email" id=""email>
+                <label for="comment">Комментарий</label>
+                <textarea name="comment" id="comment" cols="30" rows="10"></textarea>
+
+            </form>
         </div>
           
     </div>
